[gd_scene load_steps=3 format=3 uid="uid://xwb6cpvbrxvn"]

[ext_resource type="Script" uid="uid://ctokvpt74qotl" path="res://BaseCard/base_card.gd" id="1_igv4l"]
[ext_resource type="Script" uid="uid://chs3j5f1vuva8" path="res://minion/beast/机变甲虫/to_choose.gd" id="2_dpum2"]

[node name="机变甲虫" type="Node2D" node_paths=PackedStringArray("抉择")]
script = ExtResource("1_igv4l")
name_str = "机变甲虫"
lv = 3
atk = 2
"抉择" = NodePath("ToChoose")
metadata/_custom_type_script = "uid://ctokvpt74qotl"

[node name="ToChoose" type="Node" parent="."]
script = ExtResource("2_dpum2")
metadata/_custom_type_script = "uid://nry87dqmhnxf"
